Optimized comments for docs

--- a/docs/lib/doxx-template.jade
+++ b/docs/lib/doxx-template.jade
@@ -80,7 +80,7 @@
 - };
 
 - var addJsCode = function(text) {
--   return text.split('<pre>').join('<pre class="language-javascript">');
+-   return text.split('<pre>').join('<pre class="js">');
 - }
 
 - var transformHeaders = function(text) {
